[package]
name = "spytrap"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1", features=["derive"] }
log = "0.4.11"
anyhow = "1.0.32"
serde_json = "1.0.57"
env_logger = "0.7.1"
csv = "1.1.3"
