[package]
name = "spytrap-wifi"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1", features=["derive"] }
log = "0.4.11"
anyhow = "1.0.32"
serde_json = "1.0.57"
env_logger = "0.10"
futures = "0.3"
tokio = { version="1", features=["macros", "rt-multi-thread", "process", "io-util", "io-std", "fs", "net"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
stalkerware-indicators = "0.2"
